--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,13 @@ services:
     environment:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
+      POSTGRES_DB: monitoring
     ports:
       - '5432:5432'
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - backend
 
   clickhouse:
     image: clickhouse/clickhouse-server:latest
@@ -21,6 +24,8 @@ services:
       - CLICKHOUSE_DB=metrics
       - CLICKHOUSE_USER=test
       - CLICKHOUSE_PASSWORD=test
+    networks:
+      - backend
 
   grafana:
     image: grafana/grafana
@@ -31,11 +36,31 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=test
       - GF_SECURITY_ADMIN_PASSWORD=test
-    depends_on:
-      - clickhouse
+    networks:
+      - backend
 
+  liquibase-migrations:
+    image: liquibase/liquibase:4.18
+    depends_on:
+      - postgres
+    command:
+      - --hub-mode=off
+      - --changelog-file=master.yaml
+      - --driver=org.postgresql.Driver
+      - --url=jdbc:postgresql://postgres:5432/monitoring
+      - --username=test
+      - --password=test
+      - update
+    volumes:
+      - ./migrations:/liquibase/changelog
+    networks:
+      - backend
+
+networks:
+  backend:
 
 volumes:
   postgres-data:
   clickhouse-data:
   grafana-data:
+
