--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,5 +14,15 @@ spring:
     password: ${PSQL_PASSWORD}
     username: ${PSQL_USERNAME}
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        hbm2ddl:
+          auto: validate
 
 
